source/blender/blenkernel/intern/scene.cc
@@ -858,7 +858,6 @@ static void scene_foreach_cache(ID *id,
   IDCacheKey key{};
   key.id_session_uuid = id->session_uuid;
   key.offset_in_ID = offsetof(Scene, eevee.light_cache_data);
-  key.cache_v = scene->eevee.light_cache_data;
 
   function_callback(id,
                     &key,
